[package]
name = "pciutils-sys"
version = "0.1.1"
edition = "2021"
authors = ["CordlessCoder"]
readme = "README.md"
description = "Raw bindings to pciutils"
repository = "https://github.com/CordlessCoder/pciutils-sys"
license-file = "LICENSE"

[dependencies]

[build-dependencies]
bindgen = "0.66.1"
